# MarketStocksTracker

./: .gitignore  README.md
configs/: project setup.md
datasources/: Portafolio Indizado_Patrimonial.xlsx
sqlscripts/: create database.sql  create schema.sql
sqlscripts/migrations/: marketstockstracker_dump.sql  marketstockstracker_dump_inserts.sql  migration_v051325.sql  reverse_migration_v051325.sql
tracker-poetry/: pyproject.toml
tracker-poetry/src/tracker_poetry/: .env_sample  DEV Portafolio Indizado_Patrimonial.xlsx  Portafolio Indizado_Patrimonial DEV.xlsx  Portafolio Indizado_Patrimonial.xlsx  backup.py  constants.py  database_tool.py  environment.py  onedrive_tool.py  onedrivedownload.py  onedrivedownloader.py  portfolio_queries.py  updater.py
tracker-poetry/tests/: test_environment_loader.py  test_portfolio_queries.py
